plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.linknest'
version = '0.0.1-SNAPSHOT'
description = '북마크 플랫폼'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	//    --------------------------------------------------------------------------------------------
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	//    -------------------------------------------------------------------------------------------- Web Utils
	implementation 'org.jsoup:jsoup:1.17.2'

	//    -------------------------------------------------------------------------------------------- Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//    -------------------------------------------------------------------------------------------- JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//    -------------------------------------------------------------------------------------------- MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	//    -------------------------------------------------------------------------------------------- DB Migration
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	//    -------------------------------------------------------------------------------------------- Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//    -------------------------------------------------------------------------------------------- AWS
	implementation platform('software.amazon.awssdk:bom:2.30.38')
	implementation 'software.amazon.awssdk:s3'

	//    -------------------------------------------------------------------------------------------- Test
	testRuntimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
